--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -202,22 +202,27 @@
   RUS_Ethnic_Cohesion_0.04_increase:0 "Ethnic Cohesion will increase by §G+4%§!"
   RUS_Ethnic_Cohesion_0.06_increase:0 "Ethnic Cohesion will increase by §G+6%§!"
 
-  ###PEASENT SHIT
-  PB_RUS_peasent_worker_decisions:0 "Peasent-Worker Divide"
-  PB_RUS_peasent_worker_decisions_desc:0 "The Peasent-Worker Divide in Russia is deeepening. We need fucking workers, also Bernie's dick is small :trollface:.\n\nOur Current Percent of Workers is §Y[?RUS_number_of_workers]%§!\nOur Current Percent of Peasents is §Y[?RUS_number_of_peasents]%§!"
-  PB_RUS_recruit_workers_for_civs:0 "Recruit Workers For Civilian Industry"
+  ##########################
+  #Peasant-Worker Mechanic
+  ##########################
+
+  PB_RUS_peasent_worker_decisions:0 "Peasant-Worker Divide"
+  PB_RUS_peasent_worker_decisions_desc:0 "\n\n\n\n\n\nRussia's factories are in dire need of working hands. Luckily a large and ready pool of people can be found all over Russia, in the form of the peasantry. Whilst it may seem unethical many of these indivduals may require forceful persuasion, though there are those that remain eager for a life in the factories, and it is best that we target these indivudals first and foremost. Hopefully, in time, others may willingly employ themselves in these industrial complexes, lessening our reliance on brutish tactics.\n\n£RUS_Workers Our Current Percent of Workers is: §Y[?RUS_number_of_workers]%§!\n\n£RUS_Peasants Our Current Percent of Peasents is: §Y[?RUS_number_of_peasents]%§!\n\nOur current industrialization level is §YSemi-Industrialized§!"
+  PB_RUS_recruit_workers_for_civs:0 "Recruit Workers For Civilian Industries"
   PB_RUS_recruit_workers_for_civs_desc:0 ""
-  PB_RUS_recruit_workers_for_mils:0 "Recruit Workers For Military Industry"
+  PB_RUS_recruit_workers_for_mils:0 "Recruit Workers For Military Industries"
   PB_RUS_recruit_workers_for_mils_desc:0 ""
   PB_RUS_recruit_workers_for_infra:0 "Recruit Workers For Infrastructure Projects"
   PB_RUS_recruit_workers_for_infra_desc:0 ""
-  PB_RUS_recruit_peasents_to_work_field:0 "Recruit Peasents to the Workfield"
+  PB_RUS_recruit_peasents_to_work_field:0 "Peasant-Worker Conversion  "
   PB_RUS_recruit_peasents_to_work_field_desc:0 ""
-  RUS_percent_of_workers_minus_three_percent:0 "§ROur percent of workers will decrease by 3%§!"
-  RUS_percent_of_workers_plus_three_percent:0 "§GOur percent of workers will increase by 3%§!"
-  RUS_number_of_peasents_minus_three_percent:0 "§ROur percent of peasents will decrease by 3%§!"
-  PB_RUS_at_least_three_workers:0 "§YWe have at least 3% workers§!"
-RUS_we_have_no_more_unemployed_workers:0 "§YWe have less than 50% workers§!"
+  RUS_percent_of_workers_minus_three_percent:0 "Our percent of workers will decrease by §R-3%§!"
+  RUS_percent_of_workers_plus_three_percent:0 "Our percent of workers will increase by §G+3%§!"
+  RUS_number_of_peasents_minus_three_percent:0 "Our percent of peasents will decrease by §R-3%§!"
+  PB_RUS_at_least_three_workers:0 "We have at least §Y3%§! workers"
+  RUS_we_have_no_more_unemployed_workers:0 "We have less than §Y50%§! workers"
+  RUS_we_have_no_more_peasants:0 "We have more than §Y15%§! peasents"
+  PB_RUS_Peasent_Deadline:0 "Industrialization Deadline"
   
   ##########################
   #Top Bar
@@ -254,7 +259,7 @@ RUS_we_have_no_more_unemployed_workers:0 "§YWe have less than 50% workers§!"
   ##########################
 
   PB_RUS_aftermath_of_the_nationalist_revolts:0 "Aftermath of the Nationalist Revolts"
-  PB_RUS_aftermath_of_the_nationalist_revolts_desc:0 "The Nationalist Revolts of the 1920s have forever damned Russia; any dreams of a united slavic peoples has gone down the drain, for now. While the Prussians, Poles, Finnish, Balts and Caucasians all enjoy nominal "independence" there is a clear motive by the Russian state to fully reintegrate theses divided territories. While the Germans may have demanded that autonomy be granted to these newly birthed lands such demands were enforced in a time where Russia was weak, that is no longer the case. While Frankfurt and London may cry independence there is little they can truly do now. Russia will be united, whether they like it or not."
+  PB_RUS_aftermath_of_the_nationalist_revolts_desc:0 "The Nationalist Revolts of the 1920s have forever damned Russia; any dreams of a united slavic peoples has gone down the drain, for now. While the Prussians, Poles, Finnish, Balts and Caucasians all enjoy nominal "independence" there is a clear motive by the Russian state to fully reintegrate theses divided territories. While the Germans may have demanded that autonomy be granted to these newly birthed lands such demands were enforced in a time where Russia was weak, that is no longer the case. While Frankfurt and London may cry independence there is little they can truly do now. Russia will be united, whether they like it or not.\n\nThose of Jewish origin arguably suffer the worst out of all of Russia's various ethnicities. Worker camps have been set up around Russia where thousands of Jews have been 'employed' in life threatening laborious activities. Many often die in the first few days, even those that have managed to outlive the rest of their brothers and sisters typically meet a death far worse than starvation or over exhaustion."
   PB_RUS_the_plotting_scoundrels:0 "Political Violence"
   PB_RUS_the_plotting_scoundrels_desc:0 ""
   PB_RUS_revenge_for_the_fallen:0 "Revenge For The Fallen"
@@ -585,6 +590,7 @@ RUS_we_have_no_more_unemployed_workers:0 "§YWe have less than 50% workers§!"
   ##########################
 
   Tsar_Is_Fucking_Dead_LOL:0 "The Tsar Is Dead"
+  RUS_Peasant_Deadline:0 "This mechanic will timeout once the deadline has been reached"
   
   ########################## 
   # TOOLTIPS
@@ -602,10 +608,12 @@ RUS_we_have_no_more_unemployed_workers:0 "§YWe have less than 50% workers§!"
   PB_RUS_Maintaining_The_Status_Quo_tt:0 "\n§gAlexei will continue in his father's footsteps and bring a new age of Russian imperialism to the continent, unhampered by leftist political thought and doctrines.§!"
   PB_RUS_One_Leader_One_Russia_tt:0 "\n§gKirill will proclaim a new century for Russia, one full of economic profitability and revanchist ideals.§!"
   PB_RUS_Bourgeois_Dealings_tt:0 "\n§gThe Russian aristocracy and bourgeois will be granted greater power in political affairs, the ideas of unhampered capitalism are soon to be realized.§!"
-  PB_RUS_The_New_Hussars_tt:0 "\nIf you have researched Basic Medium Landships then two §YExperimental§! Medium Landship divisions will be mobolized"
+  PB_RUS_The_New_Hussars_tt:0 "\nIf you have researched Basic Medium Landships then two §YExperimental§! Medium Landship divisions will be mobolized in Moscow"
   PB_RUS_The_Imperial_Army_tt:0 "Unlocks £decision_icon_small §YDecisions§! for the Imperial Army"
   PB_RUS_The_Imperial_Navy_tt:0 "Unlocks £decision_icon_small §YDecisions§! for the Imperial Navy"
   PB_RUS_The_Imperial_Airforce_tt:0 "Unlocks £decision_icon_small §YDecisions§! for the Imperial Airforce"
+  PB_RUS_Tesla_Suit_Implementation_tt:0 "\nTwo §YExperimental§! Hardsuit divisions will be mobolized in Moscow"
+  PB_RUS_Peasent_Deadline_tt:0 "The Peasent-Worker Divide mechanic will end."
 
   #######################
   # PARTIES
