--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -207,7 +207,7 @@
   ##########################
 
   PB_RUS_peasent_worker_decisions:0 "Peasant-Worker Divide"
-  PB_RUS_peasent_worker_decisions_desc:0 "\n\n\n\n\n\nRussia's factories are in dire need of working hands. Luckily a large and ready pool of people can be found all over Russia, in the form of the peasantry. Whilst it may seem unethical many of these individuals may require forceful persuasion, though there are those that remain eager for a life in the factories, and it is best that we target these individuals first and foremost. Hopefully, in time, others may willingly employ themselves in these industrial complexes, lessening our reliance on brutish tactics.\n\n£RUS_Workers Our Current Percent of Workers is: §Y[?RUS_number_of_workers]%§!\n\n£RUS_Peasants Our Current Percent of Peasents is: §Y[?RUS_number_of_peasents]%§!\n\nOur current industrialization level is §YAgrarianism§!"
+  PB_RUS_peasent_worker_decisions_desc:0 "\n\n\n\n\n\nRussia's factories are in dire need of working hands. Luckily a large and ready pool of people can be found all over Russia, in the form of the peasantry. Whilst it may seem unethical many of these individuals may require forceful persuasion, though there are those that remain eager for a life in the factories, and it is best that we target these individuals first and foremost. Hopefully, in time, others may willingly employ themselves in these industrial complexes, lessening our reliance on brutish tactics.\n\n£RUS_Workers Our Current Percent of Workers is: §Y[?RUS_number_of_workers]%§!\n\n£RUS_Peasants Our Current Percent of Peasents is: §Y[?RUS_number_of_peasents]%§!\n\n"
   PB_RUS_recruit_workers_for_civs:0 "Recruit Workers For Civilian Industries"
   PB_RUS_recruit_workers_for_civs_desc:0 ""
   PB_RUS_recruit_workers_for_mils:0 "Recruit Workers For Military Industries"
@@ -223,6 +223,12 @@
   RUS_we_have_no_more_unemployed_workers:0 "We have less than §Y50%§! workers"
   RUS_we_have_no_more_peasants:0 "We have more than §Y15%§! peasents"
   PB_RUS_Peasent_Deadline:0 "Industrialization Deadline"
+
+  RUS_Subsistence_Agriculture_Current:0 "Our current industrialization level is §YSubsistence Agriculture§!"
+  RUS_Agrarianism_Current:0 "Our current industrialization level is §YAgrarianism§!"
+  RUS_Semi_Industrialized_Current:0 "Our current industrialization level is §YSemi-Industrialized§!"
+  RUS_Industrialized_Current:0 "Our current industrialization level is §YIndustrialized§!"
+  RUS_Post_Industrial_Current:0 "Our current industrialization level is §YPost-Industrial§!"
   
   ##########################
   #Top Bar
