--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -576,6 +576,34 @@
   PB_RUS_Rennovate_The_Airfields:0 " Rennovate The Airfields"
   PB_RUS_Bombs_Away:0 "Bombs Away"
 
+  PB_RUS_The_Great_March_Forward:0 "The Great March Forward"
+  PB_RUS_Faith_In_Mikoyan:0 "Faith In Mikoyan"
+  PB_RUS_Contacting_The_Steel_Barons:0 "Contacting The Steel Barons"
+  PB_RUS_Factory_Expansions:0 "Factory Expansions"
+   PB_RUS_Increase_The_States_Budgets:0 "Increase The States Budgets"
+  PB_RUS_Industrial_Grants:0 "Industrial Grants"
+  PB_RUS_Eager_Hands_Demand_Work:0 "Eager Hands Demand Work"
+  PB_RUS_Implement_Autarkic_Policies:0 "Implement Autarkic Policies"
+  PB_RUS_A_Guiding_Hand:0 "A Guiding Hand"
+  PB_RUS_The_Siberian_Railway_Initiative:0 "The Siberian Railway Initiative"
+  PB_RUS_Dissolve_The_Peasantry:0 "Dissolve The Peasantry"
+  PB_RUS_Mechanization_Efforts:0 "Mechanization Efforts"
+  PB_RUS_Urban_Housing_Expansions:0 "Urban Housing Expansions"
+  PB_RUS_Purge_Illiteracy:0 "Purge Illiteracy"
+  PB_RUS_Weapon_Workshops:0 "Weapon Workshops"
+  PB_RUS_The_University_Of_Moscow:0 "The University Of Moscow"
+  PB_RUS_City_Planning_Investments:0 "City Planning Investments"
+  PB_RUS_Made_In_Russia_Campaign:0 "Made In Russia Campaign"
+  PB_RUS_Trust_In_Kosygin:0 "Trust In Kosygin"
+  PB_RUS_Encourage_Investors:0 "Encourage Investors"
+  PB_RUS_The_First_Steps_To_A_Freer_Market:0 "The First Steps To A Freer Market"
+  PB_RUS_Business_Subsidies:0 "Business Subsidies"
+  PB_RUS_Loosen_Corporate_Regulations:0 "Loosen Corporate Regulations"
+  PB_RUS_Establish_The_Board_Of_Directors:0 "Establish The Board Of Directors"
+  PB_RUS_Purchase_Foreign_Machinery:0 "Purchase Foreign Machinery"
+  PB_RUS_An_Unrestrained_Economy:0 "An Unrestrained Economy"
+
+
   ########################## 
   # Decisions
   ##########################
@@ -584,12 +612,15 @@
   PB_RUS_POL_Independence_War_desc:0 "\n\n\n\n\n\nPoland has finally decided to rid itself of Russian control, declaring total independence as a result of Russia's continued russification campaigns. While this will be no easy  fight the Polish people remain hoepeful. Moscow now has an emergency on their hands, and it could quickly spiral out of control."
   POL_Peace_Timeout:0 "Poland Forever"
   Russia_Will_Sign_A_Peace_With_Poland:0 "Russia Will Sign A Peace With Poland"
+
   PB_RUS_Imperial_Military:0 "The Imperial Military"
   PB_RUS_Imperial_Military_desc:0 "\n\n\n\n\n\nThe Imperial Military desperately needs an overhaul if it is to be on par with the likes of Great Britain and Germany. Whilst we may have the upper hand with electrical based offensive technologies our motorization sectors are comparatively lacking. Additionally our Navy and Airforce are rather small and outdated and are in need of further modernisation efforts. The price may be a large one to pay but these needed changes are important to the survival of Russia.\n\nThese decisions will work in conjuction with the §YManaging The Military§!  mechanic."
   PB_RUS_Recruit_New_Generals:0 "Recruit New Generals"
   PB_RUS_Innovative_New_Technologies:0 "Innovative New Technologies"
   PB_RUS_Expand_Military_Production:0 "Expand Military Production"
   PB_RUS_Funds_For_The_Loyal:0 "Funds For The Loyal"
+
+  PB_RUS_Siberian_Railway:0 "Trans-Siberian Railway Initiative"
 
   ########################## 
   # FLAGS
