RUS Industry Tree Stuff And French Loc

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -335,18 +335,18 @@
   French.28.b:0 "We are not ready for a fight just yet."
 
   French.29.t:0 "France declares their claims on the Dutch"
-  French.29.d:0 ""
+  French.29.d:0 "Recent reports from our infiltrated assets within the French government seem to point toward ambitions of claiming the entirety of Dietland.  This has been further substantiated by Dutch reports of increased mobilization of French soldiers at their borders.  Though Dietland contains many natural defenses, their armed forces are small and could not hope to survive a sustained conflict with the rebuilt French Army.  Though we may shudder at the thought, with the French already having taken Wallonia, the seizure of Dietland would open up a dangerous flank on our borders and would be extremely detrimental in any future conflicts with the French.  Certain elements in our high command believe that we must answer this blatant act of aggression with war, but our diplomats believe that we could open a compromise, perhaps offering them partial concessions in exchange for dropping any further claims on the region.  Of course, we could just abandon Dietland entirely."
   French.29.a:0 "Propose a compromise for Flanders"
   French.29.b:0 "Holland is of no concern to us."
   French.29.c:0 "The concert of Europe shall not be interrupted!"
 
   French.30.t:0 "A Compromise at Wallonia"
-  French.30.d:0 ""
+  French.30.d:0 "A team of German diplomats has invited our ambassador to Germany and his team to the recently annexed  city of Liège, where they hope to make a compromise with us and avoid war between our two nations.  Already, the commotion and shouting in the room would seemingly be a bad omen, but not all hope may be lost yet.\n\nOne German diplomat in particular has proposed a rather tantalizing offer.  In exchange for abandoning their claims on the rest of Dietland, France shall be granted the region of Flanders,  completing the annexation of all former Belgian lands into the French nation.  Of course, the Dutch have absolutely no say in the matter, and their diplomats are not present at the conference."
   French.30.a:0 "Acceptable terms."
   French.30.b:0 "We will have all our claims!"
 
   French.31.t:0 "Germany abandons the Dutch"
-  French.31.d:0 ""
+  French.31.d:0 "===TRÈS SECRET===\n\nIntelligence reports from our spies within the German government indicate that the German Empire has no intention of going to war with us over our impending campaign against Dietland. One of our spies even caught the German ambassador on tape saying that "we would be fools to spill even a drop of blood over those tulip growers".\n\nFurthermore, additional reports have identified that the German army has reduced troop deployments on our border and have withdrawn from Dietland entirely. There is seemingly no longer any foreign opposition to our designs on the Dutch. We should proceed with the invasion expediently; we expect victory within two weeks of the start of hostilities."
   French.31.a:0 "Onwards to Amsterdam!"
 
   French.32.t:0 "Germany defends the Dutch"
