--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -219,6 +219,8 @@
   RUS_percent_of_workers_minus_three_percent:0 "Our percent of workers will decrease by §R-3%§!"
   RUS_percent_of_workers_plus_three_percent:0 "Our percent of workers will increase by §G+3%§!"
   RUS_number_of_peasents_minus_three_percent:0 "Our percent of peasents will decrease by §R-3%§!"
+  RUS_percent_of_workers_plus_nine_percent:0 "Our percent of workers will increase by §G+9%§!"
+  RUS_percent_of_workers_plus_one_percent:0 "Our percent of workers will increase by §G+1%§!"
   PB_RUS_at_least_three_workers:0 "We have at least §Y3%§! workers"
   RUS_we_have_no_more_unemployed_workers:0 "We have less than §Y50%§! workers"
   RUS_we_have_no_more_peasants:0 "We have more than §Y15%§! peasents"
@@ -264,8 +266,8 @@
   # IDEAS
   ##########################
 
-  PB_RUS_aftermath_of_the_nationalist_revolts:0 "Aftermath of the Nationalist Revolts"
-  PB_RUS_aftermath_of_the_nationalist_revolts_desc:0 "The Nationalist Revolts of the 1920s have forever damned Russia; any dreams of a united slavic peoples has gone down the drain, for now. While the Prussians, Poles, Finnish, Balts and Caucasians all enjoy nominal "independence" there is a clear motive by the Russian state to fully reintegrate theses divided territories. While the Germans may have demanded that autonomy be granted to these newly birthed lands such demands were enforced in a time where Russia was weak, that is no longer the case. While Frankfurt and London may cry independence there is little they can truly do now. Russia will be united, whether they like it or not.\n\nThose of Jewish origin arguably suffer the worst out of all of Russia's various ethnicities. Worker camps have been set up around Russia where thousands of Jews have been 'employed' in life threatening laborious activities. Many often die in the first few days, even those that have managed to outlive the rest of their brothers and sisters typically meet a death far worse than starvation or over exhaustion."
+  PB_RUS_aftermath_of_the_nationalist_revolts:0 "Aftermath Of The Nationalist Revolts"
+  PB_RUS_aftermath_of_the_nationalist_revolts_desc:0 "The Nationalist Revolts of the 1920s have forever damned Russia; any dreams of a united slavic peoples has gone down the drain, for now. While the Prussians, Poles, Finnish, Balts and Caucasians all enjoy nominal "independence" there is a clear motive by the Russian state to fully reintegrate theses divided territories. While the Germans may have demanded that autonomy be granted to these newly birthed lands such demands were enforced in a time where Russia was weak, that is no longer the case. While Frankfurt and London may cry independence there is little they can truly do now. Russia will be united, whether they like it or not.\n\nThose of Jewish origin arguably suffer the worst out of all of Russia's various ethnicities. Worker camps have been set up around Russia where thousands of Jews have been 'employed' in life threatening laborious activities. Many often die in the first few days, even those that have managed to outlive the rest of their brothers and sisters typically meet a death far worse than starvation or over exhaustion. Despite the quantity and organized nature of these camps only Moscow knows of their existance, and if any information about the labour camps was to somehow leave the confines of Russia, then Moscow may have an international emergency on their hands."
   PB_RUS_the_plotting_scoundrels:0 "Political Violence"
   PB_RUS_the_plotting_scoundrels_desc:0 ""
   PB_RUS_revenge_for_the_fallen:0 "Revenge For The Fallen"
@@ -292,6 +294,7 @@
   PB_RUS_Unrelenting_Offensives_Idea:0 "Unrelenting Offensives"
   PB_RUS_Decentralize_High_Command_Idea:0 "Decentralize High Command Idea"
   PB_RUS_Envelope_and_Liquidate_Idea:0 "Envelope And Liquidate"
+  PB_RUS_A_Guiding_Hand:0 "A Guiding Hand"
   
   ##########################
   # EVENTS
@@ -635,6 +638,7 @@
 
   PB_RUS_Total_Control_tt:0 "\n§gTsarina Alexandra will bring freedom and prosperity to the Eurasian realm, Russia will grow under a new golden age.§!"
   PB_RUS_Crackdown_On_Extremism_tt:0 "              \n" # {-- Use this to space effects out
+  PB_RUS_White_Line:0 "§w----------------§~"
   PB_RUS_Holy_Russia_United_tt:0 "Ethnic Cohesion Minimum Value §G+10§!"
   PB_RUS_Military_Supervision_tt:0 "\n§gThe Tsarina will be little more than a puppet queen, her actions and words mean nothing. Russia is under new management.§!"
   PB_RUS_Rigged_Promotions_tt:0 "Political Dissonance Maximum Value §G-10§!"
