--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -606,6 +606,8 @@
   PB_RUS_Purchase_Foreign_Machinery:0 "Purchase Foreign Machinery"
   PB_RUS_An_Unrestrained_Economy:0 "An Unrestrained Economy"
 
+  PB_RUS_Anarchic_Servitude:0 "Anarchic Servitude"
+
 
   ########################## 
   # Decisions
