--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -491,7 +491,6 @@
   PB_RUS_Work_Will_Set_You_Free:0 "Work Will Set You Free"
   PB_RUS_The_Business_Coup:0 "The Business Plot"
 
-
   PB_RUS_Alexei:0 "Alexei"
   PB_RUS_Alexei_desc:0 ""
   PB_RUS_Maintaining_The_Status_Quo:0 "Maintaining The Status Quo"
@@ -607,6 +606,16 @@
   PB_RUS_An_Unrestrained_Economy:0 "An Unrestrained Economy"
 
   PB_RUS_Anarchic_Servitude:0 "Anarchic Servitude"
+  PB_RUS_The_National_Salvation_Fund:0 "The National Salvation Fund"
+  PB_RUS_Expand_The_Military_Sector:0 "Expand The Military Sector"
+  PB_RUS_Educate_The_Loyal:0 "Patriotic Education"
+  PB_RUS_Cheap_Labour_Aplenty:0 "Cheap Labour Aplenty"
+  PB_RUS_Expand_The_Work_Camps:0 "Expand The Work Camps"
+  PB_RUS_Toil_The_Earth:0 "Toil The Earth"
+  PB_RUS_The_Empire_Demands_More:0 "The Empire Demands More"
+  PB_RUS_Developing_The_Motherland:0 "Developing The Motherland"
+  PB_RUS_Industry_Advancements:0 "Industry Advancements"
+  PB_RUS_Arms_For_The_Loyal:0 "Arms For The Loyal"
 
 
   ########################## 
