--- a/localisation/PB_Scripted_Effects_l_english.yml
+++ b/localisation/PB_Scripted_Effects_l_english.yml
@@ -11,3 +11,7 @@
   PB_remove_all_ministers_tt:0 "§YAll Current Ministers will be Removed§!\n"
 
   RULE_ALLOW_RELEASE_NATIONS_BLOCKED_TOOLTIP:0 "§YReleasing Nations§! is currently §RDISABLED§!"
+
+  coalition_pop_indicator_text: "£handshake_icon    §A[?coalition_popularity]%§!"
+  coalition_pop_indicator_desc: "Our current §Ycoalition§! popularity is §G[?coalition_popularity]%§!.\n\nWe gain the following §YEffects§!:\n\nConstruction Speed: §G+[?coalition_display]%§!\nStability: §G+[?coalition_display]%§!\nPolitical Power Gain: §G+[?coalition_display]%§!"
+  coalition_popularity_modifier: "Coalition Popularity"
