--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -207,7 +207,7 @@
   ##########################
 
   French.1.t:0 "Victory in Frankfurt"
-  French.1.d:0 "With the German menace finally pushed back to its capital, French forces were able to swiftly capture the administrative capital of the German Empire. With the fall of Frankfurt, led by the chaos and division plagueing the Germans, several German officials and commanders have proposed negotiations regarding peace and ending our German war effort. With the British still on our tail, a German peace could allow us to focus our attention on the decadent British Empire. The new pro-French government has been established in Munich under the German nationalist Anton Drexler and a group of other French collaborators that are willing to fight against the British empire and liberal democracy."
+  French.1.d:0 "With the German menace finally pushed back to its capital, French forces were able to swiftly capture the administrative capital of the German Empire. With the fall of Frankfurt, led by the chaos and division plagueing the Germans, several German officials and commanders have proposed negotiations regarding peace and ending our German war effort. With the British still on our tail, a German peace could allow us to focus our attention on the decadent British Empire. The new pro-French government has been established in Nuremberg under the German nationalist Anton Drexler and a group of other French collaborators that are willing to fight against the British empire and liberal democracy."
   French.1.a:0 "Victory at last"
 
   French.2.t:0 "Appointing a German Commissaire"
@@ -287,7 +287,7 @@
   French.18.a:0 "The Church shall be swept away, as with all things against the New State."
 
   French.19.t:0 "The Remilitarization of Lorraine"
-  French.19.d:0 "When the Kaiser enforced the Treaty of Tours onto the Bourbon dynasty German high command remained hopeful on the effectiveness such a treaty would have on preventing another World War; if only they knew. With revanchist fervour at an all time high and our armed forces rapidly expanding the bureaucrats in Frankfurt know damn well what we all want. The Remilitarization of Lorraine is but the first step in a series of processes to ensure total French hegemony in the following years, before we know it our troops will be marching through the cities of Berlin, Vienna, and Munich singing and dancing like the Germans did so long ago. Yet we shall go the extra step, not only will we guarantee that Germany remains neutered from global affairs, but we will fundamentally change their society as a whole. Afterall revenge isn’t about defeating one’s nation, but to make that very nation incapable of existing, for the rest of time. "
+  French.19.d:0 "When the Kaiser enforced the Treaty of Tours onto the Bourbon dynasty German high command remained hopeful on the effectiveness such a treaty would have on preventing another World War; if only they knew. With revanchist fervour at an all time high and our armed forces rapidly expanding the bureaucrats in Frankfurt know damn well what we all want. The Remilitarization of Lorraine is but the first step in a series of processes to ensure total French hegemony in the following years, before we know it our troops will be marching through the cities of Berlin, Vienna, and Nuremberg singing and dancing like the Germans did so long ago. Yet we shall go the extra step, not only will we guarantee that Germany remains neutered from global affairs, but we will fundamentally change their society as a whole. Afterall revenge isn’t about defeating one’s nation, but to make that very nation incapable of existing, for the rest of time. "
   French.19.a:0 "The Treaty of Tours is dead."
 
   French.20.t:0 "French Troops in Lorraine"
@@ -617,6 +617,10 @@
   French.93.d:0 ""
   French.93.a:0 "They Had Their Chance"
 
+  French.94.t:0 "The Conquest Of Germania"
+  French.94.d:0 ""
+  French.94.a:0 "Oh How Sweet It Is To Hear Them Scream"
+
   French.1000.t:0 "French Diplomatic Outreach"
   French.1000.d:0 "The French are approaching us for an alliance"
   French.1000.a:0 "We agree"
@@ -903,6 +907,23 @@
   French_flavour.69.d:0 ""
   French_flavour.69.a:0 "Long live the State"
 
+  French_personality.1.t:0 "Workers Protest"
+  French_personality.1.d:0 "Some workers in the city of Bordeaux are protesting against the lack of proper saftey regulations within their workplace. They cite continued neglect from superiors as the source of the problem and are demanding that the French Popular Front do something about it. Some informants have notified local SP authorities that some workers use to belong to anti-triumvirate political parties and that such evidence provides enough justification for a crackdown. How do we respond?"
+  French_personality.1.a:0 "Crackdown On These Disloyal Pigs"
+  French_personality.1.b:0 "Address Their Wants"
+  French_personality.1.c:0 "We Must Stand United"
+
+  French_personality.2.t:0 "Echoes Of Corruption"
+  French_personality.2.d:0 "Rumours have spread that certain individuals within administrative sectors of our government are accepting bribes for turning a blind eye at illegal activities. Although minor and relatively harmless such corruption could grow if left unattended to. Some have even said that such corruption is starting to blead into the armed forces. How do we respond?"
+  French_personality.2.a:0 "Let Them Be"
+  French_personality.2.b:0 "Find These Ungrateful Dogs"
+  French_personality.2.c:0 "A Little Out Of Pocket Money Won't Hurt"
+
+  French_personality.3.t:0 "New Factory Opening In Paris"
+  French_personality.3.d:0 ""
+  French_personality.3.a:0 "Wonderful"
+  French_personality.3.b:0 "Can We Build Another One Of Those?"
+
   ##########################
   # IDEAS
   ##########################
@@ -1037,6 +1058,13 @@
   FRA_Child_Soliders:0 "Child Soliders"
   FRA_Cutting_Corners:0 "Cutting Corners"
   FRA_Bunker_Initiative:0 "Bunker Initiative"
+
+  FRA_German_Liberation_Front_Presence_High:0 "§gGerman Liberation Front Presence:§! §RHigh§!"
+  FRA_German_Liberation_Front_Presence_High_desc:0 "The GLF threatens the daily operation of our German puppet goverment based in Nuremberg as well as our own military garrisons stationed in such chaotic territories. We are having to devote an absurdly large portion of our Army to quell the partisan unrest and if we do not address the sitaution now then our newly conquered German lands may revolt under the banner of the German government in exile.\n\n§RIf the German Liberation Front Presence reaches 90% or above then a revolt will spawn within Nuremberg Germany. If the revolt occurs whatever level of GLF presence you have will permanently affect your country for the rest of the campaign.§!"
+  FRA_German_Liberation_Front_Presence_Medium:0 "§gGerman Liberation Front Presence:§! §RMedium§!"
+  FRA_German_Liberation_Front_Presence_Medium_desc:0 "The GLF threatens the daily operation of our German puppet goverment based in Nuremberg as well as our own military garrisons stationed in such chaotic territories. We are having to devote an absurdly large portion of our Army to quell the partisan unrest and if we do not address the sitaution now then our newly conquered German lands may revolt under the banner of the German government in exile.\n\n§RIf the German Liberation Front Presence reaches 90% or above then a revolt will spawn within Nuremberg Germany. If the revolt occurs whatever level of GLF presence you have will permanently affect your country for the rest of the campaign.§!"
+  FRA_German_Liberation_Front_Presence_Low:0 "§gGerman Liberation Front Presence:§! §RLow§!"
+  FRA_German_Liberation_Front_Presence_Low_desc:0 "The GLF threatens the daily operation of our German puppet goverment based in Nuremberg as well as our own military garrisons stationed in such chaotic territories. We are having to devote an absurdly large portion of our Army to quell the partisan unrest and if we do not address the sitaution now then our newly conquered German lands may revolt under the banner of the German government in exile.\n\n§RIf the German Liberation Front Presence reaches 90% or above then a revolt will spawn within Nuremberg Germany. If the revolt occurs whatever level of GLF presence you have will permanently affect your country for the rest of the campaign.§!"
 
   ##########################
   # FOCUS
@@ -1564,9 +1592,42 @@
   PB_FRA_invest_in_norway:0 "Invest in Norway"
   PB_FRA_invest_in_sweden:0 "Invest in Sweden"
 
+  PB_FRA_Military_Tribunal:0 "The Nuremberg Tribunal"
+  PB_FRA_Military_Tribunal_desc:0 "\n\n\n\n\n\nWith Germany now bending the knee to their new French masters the need for an officialised tribunal against those that dared to oppose us is becoming very apparent. Whilst we have already gathered much of the pre-collapse German government and high command there are still those that are cowering within the German country side. We must find these individuals if we wish to put and end to the German Liberation Front.\n\n£GFX_FRA_GLF   German Liberation Front Presence: §Y[?FRA_GLFP]%§!\n\nThe German Liberation Front insurgent campaigns will stop once the German Liberation Front Presence is below §Y25%§!"
+  PB_FRA_Execute_A_German_General:0 "Execute A German General"
+  PB_FRA_Execute_A_German_General_desc:0 "Rumours have spread that some of the imprisoned German generals are planning an escape from collaborative authorities with the assistance of GLF partisans. We must send a clear message that we will not stand for such actions and any efforts to subvert our cause will be met with the harshest of punishments."
+  PB_FRA_Recruit_Collaborators:0 "Recruit Collaborators"
+  PB_FRA_Recruit_Collaborators_desc:0 "Germany is full of young war ready men and it would be a shame to leave such soliders under the command of Nuremberg Germany. They deserve a future worth fighting for, even if such future involves the destruction of their so called 'fatherland'. At the very least we can use these soliders to crackdown on the GLF threat."
+  PB_FRA_Seize_The_Kaiserliche_Marine_Remnants:0 "Seize The Kaiserliche Marine Remnants"
+  PB_FRA_Seize_The_Kaiserliche_Marine_Remnants_desc:0 "Some remenant ships of the Kaiserliche Marine remain docked in the German shipping port of Wilhelmshaven. Currently the ships serve no purpose other than to occupy space and seeing that our ship count is relatively lacking we could always just demand the Nuremberg administration to transfer control of the navy to the French state, after all they can't say no."
+  PB_FRA_Conduct_A_Submission_Sweep:0 "Conduct A Submission Sweep"
+  PB_FRA_Conduct_A_Submission_Sweep_desc:0 "Sending the extra solider or two on patrol duties could help mitigate any GLF Presence that can be found inside and around major city centres. Of cause this won't solve the partisan crisis but it will surely assist in our efforts to secure strategic Urban points of interest."
+  PB_FRA_Release_The_SP:0 "Release The SP"
+  PB_FRA_Release_The_SP_desc:0 "The SP are an effective state funded police force that have spent thousands of hours cleaning France's streets of vermin but since the situation back home is dealt with these deprived goons need somewhere new that they can call home, and I know just the place."
+  PB_FRA_Commit_To_A_Show_Of_Strength:0 "Commit To A Show Of Strength"
+  PB_FRA_Commit_To_A_Show_Of_Strength_desc:0 "The German Liberation Front perceives us as weak. A good show of force will change their minds."
+  PB_FRA_Expand_A_Military_Garrison:0 "Expand A Military Garrison"
+  PB_FRA_Expand_A_Military_Garrison_desc:0 "Some of the countryside garrisons in Germany are seriously lacking in men. There is a clear remedy to this issue though, thousands of veterans are returning from their efforts in the inital invasion of the Germany and are need of work. Let us redirect these men back to Germany as garrison guards."
+  PB_FRA_Install_Competent_Delegates:0 "Install Competent Delegates"
+  PB_FRA_Install_Competent_Delegates_desc:0 "Our current batch of French delegates to our puppet government in Nuremberg are causing quite the ruckus. Corruption and overindulgence are said to be occuring almost daily and only worsening our situation with the GLF. It is time we replaced such individuals. "
+  PB_FRA_Pro_Revanchiste_Propoganda:0 "Pro-Revanchiste Propaganda Campaigns"
+  PB_FRA_Pro_Revanchiste_Propoganda_desc:0 "We must convince the German people to fight the GLF threat. They must know that such an organisation does not care for their wellbeing, only to take from the state and those that have worked hard."
+  PB_FRA_Stage_One_Military_Tribunal:0 "Stage One: Military Tribunal"
+  PB_FRA_Stage_Two_Military_Tribunal:0 "Stage Two: Military Tribunal"
+  PB_FRA_Stage_Three_Military_Tribunal:0 "Stage Three: Military Tribunal"
+  PB_FRA_Military_Tribunal_Test:0 "Military Tribunal Test"
+  PB_FRA_Military_Tribunal_Test_desc:0 "Click This If You Have Small PP"
+  PB_FRA_German_Partisans:0 "German Partisan Campaign"
+  PB_FRA_German_Partisan_Uprising:0 "German Partisan Uprising"
+
   ##########################
   # TOOLTIPS
   ##########################
+
+  PB_Pers_Charismatic_FRA_tt:0 "§CThis option is available because your leader is Charismatic§!"
+  PB_Pers_Intelligent_FRA_tt:0 "§CThis option is available because your leader is Intelligent!"
+  PB_Pers_Ambitious_FRA_tt:0 "§CThis option is available because your leader is Ambitious!"
+  PB_Pers_Diligent_FRA_tt:0 "§CThis option is available because your leader is Diligent!"
 
   FRA_SP_reshuffle_xavier:0 "The Current SP leader will be replaced with Xavier Vallat"
 
@@ -1659,6 +1720,21 @@
   PB_FRA_Foreign_Forces_tt:0 "Three §YTempête Populaire§! Divisions Will Be Mobolized Across France"
 
   PB_FRA_Factionalism_Clamp_tt:0 "The Maximum Value For Factionalism Will be §PLowered§!"
+
+  German_Liberation_Front_Presence_minus_2_tt:0 "German Liberation Front Presence §G-2§!"
+  German_Liberation_Front_Presence_minus_4_tt:0 "German Liberation Front Presence §G-4§!"
+  German_Liberation_Front_Presence_minus_6_tt:0 "German Liberation Front Presence §G-6§!"
+  German_Liberation_Front_Presence_plus_2_tt:0 "German Liberation Front Presence §R+2§!"
+  German_Liberation_Front_Presence_plus_4_tt:0 "German Liberation Front Presence §R+4§!"
+  PB_FRA_Stage_One_Military_Tribunal_tt:0 "German Liberation Front Presence < §Y50%§!"
+  PB_FRA_Stage_Two_Military_Tribunal_tt:0 "German Liberation Front Presence < §Y30%§!"
+  PB_FRA_Stage_Three_Military_Tribunal_tt:0 "German Liberation Front Presence < §Y10%§!"
+  PB_FRA_German_Partisans_tt:0 "German Liberation Front Presence < §Y25%§!"
+  PB_FRA_Seize_The_Kaiserliche_Marine_Remnants_tt:0 "The Kaiserliche Marine will be placed under French command"
+  PB_FRA_German_Partisan_Uprising_tt:0 "German Liberation Front Presence < §Y90%§!"
+  PB_FRA_German_Partisan_Uprising_Start_tt:0 "The German Liberation Front will revolt"
+
+  FRA_GLF_THINGY_OVER:0 "The German Liberation Front mechanic is over"
 
   ##########################
   # FRENCH COLLABORATION IN GERMANY
