--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -8249,6 +8249,31 @@ SAN_an_ADJ:0 "Indian"
  RSC_ds_ADJ:0 "Russo-Chinese"
  RSC_cn_ADJ:0 "Russo-Chinese"
  RSC_an_ADJ:0 "Russo-Chinese"
+ 
+ GLF_ni:0 "German Liberation Front"
+ GLF_ni_DEF:0 "The German Liberation Front"
+ GLF_ds:0 "German Liberation Front"
+ GLF_ds_DEF:0 "The German Liberation Front"
+ GLF_rc:0 "German Liberation Front"
+ GLF_rc_DEF:0 "The German Liberation Front"
+ GLF_an:0 "German Liberation Front"
+ GLF_an_DEF:0 "The German Liberation Front"
+ GLF_cn:0 "German Liberation Front"
+ GLF_cn_DEF:0 "The German Liberation Front"
+ GLF_lb:0 "German Liberation Front"
+ GLF_lb_DEF:0 "The German Liberation Front"
+ GLF_ss:0 "German Liberation Front"
+ GLF_ss_DEF:0 "The German Liberation Front"
+ GLF_jc:0 "German Liberation Front"
+ GLF_jc_DEF:0 "The German Liberation Front"
+ GLF_ni_ADJ:0 "German"
+ GLF_rc_ADJ:0 "German"
+ GLF_lb_ADJ:0 "German"
+ GLF_ss_ADJ:0 "German"
+ GLF_jc_ADJ:0 "German"
+ GLF_ds_ADJ:0 "German"
+ GLF_cn_ADJ:0 "German"
+ GLF_an_ADJ:0 "German"
 
 ###################################
 # TEMPLATE
