Added Friaul (Northern Venice) gave it to Germany, Modified Southern Border of Germany

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -921,4 +921,5 @@
  STATE_916:0 "STATE_916"
  STATE_917:0 "STATE_917"
  STATE_921:0 "Orol"
- STATE_922:1 "El Djouf"
+ STATE_922:0 "El Djouf"
+ STATE_923:0 "Friaul"
