Grestin forgot to push again

--- a/localisation/PB_BalkanWar_Events_l_english.yml
+++ b/localisation/PB_BalkanWar_Events_l_english.yml
@@ -86,17 +86,25 @@
   balkwar.18.d:0 ""
   balkwar.18.a:0 "Excellent."
 
-  balkwar.19.t:0 "Victory on the Romanian Front"
+  balkwar.19.t:0 "Victory in the Balkan War"
   balkwar.19.d:0 ""
   balkwar.19.a:0 "Good job, Comrades"
 
-  balkwar.20.t:0 "Victory on the Bulgarian Front"
+  balkwar.20.t:0 "Victory in the Balkan War"
   balkwar.20.d:0 ""
-  balkwar.20.a:0 "Onwards, to victory!"
+  balkwar.20.a:0 "The New Order rises!
 
-  balkwar.21.t:0 "Victory on the Greek Front"
+  balkwar.21.t:0 "Victory on the Romanian Front"
   balkwar.21.d:0 ""
   balkwar.21.a:0 "Victory is within our grasp!"
+
+  balkwar.22.t:0 "Victory on the Croatian Front"
+  balkwar.22.d:0 ""
+  balkwar.22.a:0 "Victory is within our grasp!"
+
+  balkwar.23.t:0 "Victory on the Hungarian Front"
+  balkwar.23.d:0 ""
+  balkwar.23.a:0 "Victory is within our grasp!"  
 
   ##########################
   # IDEAS
