--- a/localisation/PB_Technologies_l_english.yml
+++ b/localisation/PB_Technologies_l_english.yml
@@ -38,12 +38,31 @@
 
  tech_flamethrower:0 "Flamethrowers"
  tech_flamethrower_desc:0 "Developed during the Great War, Flamethrowers utilize a complex chemical process to launch flaming material against targets. While volatile and unwieldy, these weapons are very effective in urban environments."
+ tech_flamethrower_2:0 "Flamethrowers II"
+ tech_flamethrower_2_desc:0 "Developed during the Great War, Flamethrowers utilize a complex chemical process to launch flaming material against targets. While volatile and unwieldy, these weapons are very effective in urban environments."
+ tech_flamethrower_3:0 "Flamethrowers III"
+ tech_flamethrower_3_desc:0 "Developed during the Great War, Flamethrowers utilize a complex chemical process to launch flaming material against targets. While volatile and unwieldy, these weapons are very effective in urban environments."
+ tech_flamethrower_4:0 "Flamethrowers IV"
+ tech_flamethrower_4_desc:0 "Developed during the Great War, Flamethrowers utilize a complex chemical process to launch flaming material against targets. While volatile and unwieldy, these weapons are very effective in urban environments."
 
  tech_shockjockeys_1:0 "Shock Jockeys"
  tech_shockjockeys_1_desc:0 "An interwar expansion on tesla coil technology, Shock Jockeys use backpack mounted electrical coils and magnetized weaponry to direct high-voltage electrical waves towards enemies, causing nerve damage and liquifying soft tissue. As a result of their electrical use, these weapons are very effective in defending wet environments."
+ tech_shockjockeys_2:0 "Shock Jockeys"
+ tech_shockjockeys_2_desc:0 "An interwar expansion on tesla coil technology, Shock Jockeys use backpack mounted electrical coils and magnetized weaponry to direct high-voltage electrical waves towards enemies, causing nerve damage and liquifying soft tissue. As a result of their electrical use, these weapons are very effective in defending wet environments."
+ tech_shockjockeys_3:0 "Shock Jockeys"
+ tech_shockjockeys_3_desc:0 "An interwar expansion on tesla coil technology, Shock Jockeys use backpack mounted electrical coils and magnetized weaponry to direct high-voltage electrical waves towards enemies, causing nerve damage and liquifying soft tissue. As a result of their electrical use, these weapons are very effective in defending wet environments."
+ tech_shockjockeys_4:0 "Shock Jockeys"
+ tech_shockjockeys_4_desc:0 "An interwar expansion on tesla coil technology, Shock Jockeys use backpack mounted electrical coils and magnetized weaponry to direct high-voltage electrical waves towards enemies, causing nerve damage and liquifying soft tissue. As a result of their electrical use, these weapons are very effective in defending wet environments."
 
  tech_panzerhounds_1:0 "Panzer Hounds"
  tech_panzerhounds_1_desc:0 "Originally known as Panzerhunds in Germany, a mistranslation of the name during their adoption in Britain lead to the name Panzer Hound, with some incorrectly calling them Panther Hounds. An example of bio-mechanics, these machines utilize a dog nervous system in a machine body to produce incredibly fast killing machines for wilderness environments."
+ tech_panzerhounds_2:0 "Panzer Hounds"
+ tech_panzerhounds_2_desc:0 "Originally known as Panzerhunds in Germany, a mistranslation of the name during their adoption in Britain lead to the name Panzer Hound, with some incorrectly calling them Panther Hounds. An example of bio-mechanics, these machines utilize a dog nervous system in a machine body to produce incredibly fast killing machines for wilderness environments."
+ tech_panzerhounds_3:0 "Panzer Hounds"
+ tech_panzerhounds_3_desc:0 "Originally known as Panzerhunds in Germany, a mistranslation of the name during their adoption in Britain lead to the name Panzer Hound, with some incorrectly calling them Panther Hounds. An example of bio-mechanics, these machines utilize a dog nervous system in a machine body to produce incredibly fast killing machines for wilderness environments."
+ tech_panzerhounds_4:0 "Panzer Hounds"
+ tech_panzerhounds_4_desc:0 "Originally known as Panzerhunds in Germany, a mistranslation of the name during their adoption in Britain lead to the name Panzer Hound, with some incorrectly calling them Panther Hounds. An example of bio-mechanics, these machines utilize a dog nervous system in a machine body to produce incredibly fast killing machines for wilderness environments."
+
 
  WMDs:0 "Weapons of Mass Destruction"
  PB_WMD_Available_tt:0 "£Generic_Skull §RTerror Weapon Research is now available§!"
@@ -126,3 +145,14 @@
  special_forces_razor_girls6:0 "Bio-Tech Evolutionary Synthesis"
 
  cybers_tech:0 "Cyber Tech"
+ 
+ tech_automat_great_war:0 "Great War Automat"
+ tech_automat_light_1:0 "Duopod I"
+ tech_automat_light_2:0 "Duopod II"
+ tech_automat_light_3:0 "Duopod III"
+ tech_automat_medium_1:0 "Tripod I"
+ tech_automat_medium_2:0 "Tripod II"
+ tech_automat_medium_3:0 "Tripod III"
+ tech_automat_heavy_1:0 "Quadropod I"
+ tech_automat_heavy_2:0 "Quadropod II"
+ tech_automat_heavy_3:0 "Quadropod III"
