--- a/localisation/PB_equipment_l_english.yml
+++ b/localisation/PB_equipment_l_english.yml
@@ -169,6 +169,8 @@
  modern_tank_destroyer_equipment_1_short:0 "Modern LD"
  modern_tank_destroyer_equipment_1_desc:0 "Modern Landship Destroyers are an evolution of earlier light and medium LDs, preferring mobility and stealth to heavy armor."
 
+ gw_automat_0:0 "Great War Automat"
+
  ENG_infantry_equipment_0:0 "Standard Infantry Rifle 1918 Pattern"
  ENG_infantry_equipment_0_short:0 "S.I.R Pattern 1918"
 
