--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -564,7 +564,7 @@
   PBNews.144.d:0 "Following a lengthy battle with illness, radiological physicist Marie Salomea Skłodowska Curie passed away at her home in Vienna yesterday morning. Curie was one of the most influential scientific minds in Europe, pioneering the development of numerous radiologic and chemical processes. Curie is, most famously, the first woman to be awarded the Edison Prize, and historically the only person to win the prize in two scientific fields.\n\nCurie remains controversial in death as well as life, as her accomplishments were immense, however the Russian administration in Poland still refuses to acknowledge any of them."
   PBNews.144.a:0 "Her contributions will not be forgotten"
 
-  PBNews.145.t:0 "FIRST INTERNATIONAL TELESCREENING"
+  PBNews.145.t:0 "INTERNATIONAL TELESCREENING"
   PBNews.145.d:0 "In a culmination of more than three years of development, the International Screen Research Commission in Bern conducted the first trans-national telescreen broadcast without the need for relay networks in history. Watchers across Europe tuned in to watch a previously recorded film of the 1928 Olympic Games in Calais. Watchers with a radiographic device could even tune into an associated frequency to enjoy simulcast sound.\n\nWhile rudimentary, the broadcast demonstrates the theoretical possibility of an international telescreen broadcast without the need for bulky relay networks, although researchers stressed that the technology needs more time."
   PBNews.145.a:0 "Watching the footie just got easier"
 
